--- a/파이썬프로그래밍/문자열.ipynb
+++ b/파이썬프로그래밍/문자열.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -102,19 +102,10 @@
       "too short, you need python\n",
       "Life is too short, you need pytho\n",
       "pytho\n",
+      "nohtyp deen uoy ,trohs oot si efiL\n",
       "Lesosr ue \n",
       "Lf stosot o edpto\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Life is too short, you need python'"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -131,6 +122,8 @@
     "\n",
     "print(a[0:30:3])  # 처음 부터 29번 까지 3개의 간격으로 slicing\n",
     "print(a[::2])     # 처음 부터 끝까지 2개의 간격으로 slicing\n",
+    "\n",
+    "print(a[::-1])  # 문자열의 순서를 거구로 변경\n",
     "\n",
     "# a[0:4] = 'nife'  # TypeError: 'str' object does not support item assignment\n",
     "                   # 불변형 데이터는 요소 수정이 불가능, 요소를 변경하려면 새로운 객체를 다시 생성    "
@@ -380,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -388,9 +381,9 @@
      "output_type": "stream",
      "text": [
       "ㄱㄴㄷㄹㅁㅂㅅㅇㅈㅊㅋㅌㅍㅎㅏㅔㅣㅗㅜ\n",
-      "gndrmbs jcktphaeiou\n",
-      "{12593: 103, 12596: 110, 12599: 100, 12601: 114, 12609: 109, 12610: 98, 12613: 115, 12615: 32, 12616: 106, 12618: 99, 12619: 107, 12620: 116, 12621: 112, 12622: 104, 12623: 97, 12628: 101, 12643: 105, 12631: 111, 12636: 117}\n",
-      "miri oja\n",
+      "gndrmbs_jcktphaeiou\n",
+      "{12593: 103, 12596: 110, 12599: 100, 12601: 114, 12609: 109, 12610: 98, 12613: 115, 12615: 95, 12616: 106, 12618: 99, 12619: 107, 12620: 116, 12621: 112, 12622: 104, 12623: 97, 12628: 101, 12643: 105, 12631: 111, 12636: 117}\n",
+      "miri_oja\n",
       "ganibabo\n"
      ]
     }
@@ -417,6 +410,80 @@
     "result = 'ㄱㅏㄴㅣㅂㅏㅂㅗ'.translate(transtable)\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================1=========================\n",
+      "Name : hong gil dong\n",
+      "Birthday : 2019/12/12\n",
+      "ID Number : 20191212-1623210\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1번 답안\n",
+    "print( '{0:=^50}'.format( '1' ) )\n",
+    "s = 'hong gil dong201912121623210'\n",
+    "\n",
+    "name = s[ :s.rfind( 'g' ) + 1 ]\n",
+    "birthday_index = s.rfind( 'g' ) + 1\n",
+    "birthday = s[ birthday_index: birthday_index + 9 ]\n",
+    "idnumber = s[ s.rfind( 'g' ) + 1: ]\n",
+    "\n",
+    "print( 'Name : ' + name )\n",
+    "print( 'Birthday : ' + birthday[ :4 ] + '/' + birthday[ 4:6 ] + '/' + birthday[ 6:8 ] )\n",
+    "print( 'ID Number : ' + idnumber[ :8 ] + '-' + idnumber[ 8: ] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================2=========================\n",
+      "ProgrammingPython\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2번 답안\n",
+    "print( '{0:=^50}'.format( '2' ) )\n",
+    "s = 'PythonProgramming'\n",
+    "\n",
+    "print( s[ s.find( 'Programming' ): ] + s[ :s.find( 'Programming' ) ] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3번 답안\n",
+    "print( '{0:=^50}'.format( '3' ) )\n",
+    "\n",
+    "s = 'hello world'\n",
+    "\n",
+    "print( 'hi' + ' ' + s[ s.find( 'world' ): ] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
